# nerd-fonts-icon-browser

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  windows-mingw.cmake
.zed/: debug.json  tasks.json
include/: template.hpp
res/icon/: app.rc
script/: build_appimage.sh  install.sh  uninstall.sh
src/: constants.h  main.cpp  template.cpp
src/modules/icon_manager/: icon_manager.cpp  icon_manager.h
src/modules/json_parser/: json_parser.cpp  json_parser.h
src/modules/search_engine/: search_engine.cpp  search_engine.h
src/modules/search_engine/search_algo/: search_algo.cpp  search_algo.h
src/ui/icon_container/: icon_container.cpp  icon_container.h
src/ui/main_window/: main_window.cpp  main_window.h  main_window.ui
